# comp0035-cwi-zczlr12

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/coursework1/: coursework1.md  data_prep.py  dataset_prepared.csv
src/coursework2/: coursework2.md  employee.py
src/coursework2/tests/: test_code.py  test_employee.py
