[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0035-cw"
version = "0.0.1"
authors = [
  { name="Sarah Sanders", email="sarah.sanders@ucl.ac.uk" },
]
description = "Template repository for COMP0035 coursework 1 and coursework 2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Commented out as these were installed in venv using requirements.txt
# dependencies = [
#    "pandas",
#    "pytest",
#]

# Refer to https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools.packages.find]
where = ["src"]
include = ["coursework*"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-rA --verbose"

[tool.pytest.config]
rootpath = ["src"]